[project]
name = "ethics-game"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
    "sentence-transformers (>=5.2.3,<6.0.0)",
    "pandas (>=1.4.0,<3)",
    "plotly (>=6.6.0,<7.0.0)",
]

[tool.poetry]
packages = [{include = "ethics_game", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
